infrastructure/terraform/modules/appServer/security.tf
resource "aws_security_group" "lb-sg" {
  name        = "${var.app_name}-${var.environment}-lb-sg"
  description = "security group of the load balancer"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "allow HTTP"
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "allow HTTPS"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.app_name}-${var.environment}-lb-sg"
    Environment = var.environment
  }
}

resource "aws_security_group" "app-server-sg" {
  name        = "${var.app_name}-${var.environment}-app-server-sg"
  description = "app server security group"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = var.app_port
    to_port         = var.app_port
    protocol        = "tcp"
    security_groups = [aws_security_group.lb-sg.id]
    description     = "allow trafic from LB"
  }

  ingress {
    from_port = 9100
    to_port = 9100
    protocol = "tcp"
    security_groups = [var.monitoring_security_group_id]
    description = "Allow Prometheus to scrape Node Exporter"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.app_name}-${var.environment}-app-server-sg"
    Environment = var.environment
  }
}
